# solana-verifier

./: .gitignore  Cargo.toml  README.md  flake.nix  readme.md  validator.dockerfile
animals/: Cargo.toml
animals/src/: bird.rs  cat.rs  frog.rs  lib.rs  traits.rs
client/: Cargo.toml
client/examples/: add.rs  cast.rs  dynamic.rs  exp.rs  fib.rs  full_flow.rs  generic.rs  greeting.rs  hades.rs  hash_public_input.rs  mul.rs  poseidon.rs  scheduler.rs  set_proof.rs  verifier.rs
client/src/: account.rs  client.rs  config.rs  deployment.rs  error.rs  greeting.rs  lib.rs  main.rs  scheduler.rs  transaction.rs  utils.rs
dog/: Cargo.toml
dog/src/: lib.rs
dynamic/: Cargo.toml  README.md  build.rs
dynamic/src/: bird.rs  cat.rs  dog.rs  frog.rs  lib.rs  main.rs  mouse.rs  traits.rs
example_proof/: saya.json
examples/: client.rs  validate.rs
parser/: Cargo.toml
parser/src/: builtins.rs  json_parser.rs  lib.rs  stark_proof.rs  transform.rs
parser/src/annotations/: extract.rs
programs/greeting/: Cargo.toml
programs/greeting/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/scheduler/: Cargo.toml
programs/scheduler-program/: Cargo.toml
programs/scheduler-program/src/: entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
programs/scheduler/src/: error.rs  instruction.rs  lib.rs  processor.rs  stack.rs  state.rs
programs/scheduler/src/utils/: error.rs  mod.rs  stack.rs
programs/utils/: Cargo.toml
programs/utils/src/: lib.rs
programs/verifier/: Cargo.toml  build.rs
programs/verifier/examples/: animals.rs  arithmetic.rs  hades.rs  single.rs
programs/verifier/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  scheduler.rs  state.rs
programs/verifier/tests/: arithmetic_test.rs  hades_test.rs  hash_public_inputs.rs  init_proof.rs  poseidon_test.rs  single_test.rs
scheduler/: Cargo.toml
scheduler/src/: error.rs  lib.rs  stack.rs
src/: intermediate.rs  lib.rs  schedule.rs  task.rs
src/verify/: init_transcript.rs  mod.rs
src/verify/generate_queries/: mod.rs
src/verify/stark_commit/: assign.rs  fri_commit.rs  mod.rs  oods_coef.rs
src/verify/stark_verify/: mod.rs
src/verify/stark_verify/fri_verify/: last_layer.rs  mod.rs
src/verify/stark_verify/fri_verify/fri_verify_layers/: assign_next.rs  decommitment_mont.rs  layer.rs  mod.rs
src/verify/stark_verify/fri_verify/fri_verify_layers/compute_next_layer/: mod.rs  next_inner.rs
src/verify/stark_verify/table_decommit/: mod.rs
src/verify/verify_output/: mod.rs
swiftness/cli/: Cargo.toml
swiftness/cli/src/: lib.rs
swiftness/crates/air/: Cargo.toml
swiftness/crates/air/src/: domains.rs  lib.rs  public_memory.rs
swiftness/crates/air/src/fixtures/: decommitment.rs  public_input.rs  witness.rs
swiftness/crates/air/src/layout/: mod.rs
swiftness/crates/air/src/layout/recursive_with_poseidon/: global_values.rs  mod.rs
swiftness/crates/air/src/layout/recursive_with_poseidon/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
swiftness/crates/air/src/tests/: public_input.rs
swiftness/crates/air/src/trace/: mod.rs
swiftness/crates/commitment/: Cargo.toml
swiftness/crates/commitment/src/: lib.rs
swiftness/crates/commitment/src/table/: decommit.rs  types.rs
swiftness/crates/commitment/src/vector/: decommit.rs  types.rs
swiftness/crates/commitment/src/vector/tests/: vector_commitment_decommit.rs
swiftness/crates/fri/: Cargo.toml
swiftness/crates/fri/src/: first_layer.rs  formula.rs  fri.rs  group.rs  last_layer.rs  layer.rs  lib.rs  types.rs
swiftness/crates/fri/src/fixtures/: cache.rs  config.rs  mod.rs  unsent_commitment.rs  witness.rs
swiftness/crates/fri/src/tests/: formula.rs  last_layer.rs  next_layer.rs  verify.rs
swiftness/crates/funvec/: Cargo.toml
swiftness/crates/funvec/src/: lib.rs
swiftness/crates/pow/: Cargo.toml
swiftness/crates/pow/src/: pow.rs
swiftness/crates/stark/: Cargo.toml
swiftness/crates/stark/src/: commit.rs  lib.rs  oods.rs  stark.rs  types.rs  verify.rs
swiftness/crates/stark/src/fixtures/: commitment.rs  unsent_commitment.rs  witness.rs
swiftness/crates/stark/src/tests/: commit.rs  verify.rs
swiftness/crates/transcript/: Cargo.toml
swiftness/crates/transcript/src/: transcript.rs
swiftness/proof_parser/: Cargo.toml
tasks/arithmetic/: Cargo.toml
tasks/arithmetic/src/: add.rs  exp.rs  fact.rs  factorial.rs  fib.rs  increment.rs  lib.rs  mul.rs  op.rs
tasks/arithmetic/tests/: add_tests.rs  exp_tests.rs  fib_tests.rs  integration_tests.rs  mul_tests.rs
tasks/arithmetic_example/: Cargo.toml
tasks/arithmetic_example/src/: add.rs  exp.rs  fib.rs  lib.rs  mul.rs
tasks/example/: Cargo.toml
tasks/example/src/: add.rs  exp.rs  fib.rs  mul.rs
tasks/stark/: Cargo.toml
tasks/stark/src/: funvec.rs  lib.rs
tasks/stark/src/felt/: mod.rs  primitive_conversions.rs
tasks/stark/src/poseidon/: constants.rs  hades.rs  mod.rs  poseidon.rs
tasks/stark/src/stark_proof/: mod.rs
tasks/stark/src/swiftness/: mod.rs
tasks/stark/src/swiftness/air/: dynamic.rs  mod.rs  public_memory.rs  types.rs
tasks/stark/src/swiftness/air/trace/: config.rs  mod.rs
tasks/stark/src/swiftness/commitment/table/: config.rs  types.rs
tasks/stark/src/swiftness/commitment/vector/: config.rs  types.rs
tasks/stark/src/swiftness/fri/: config.rs  types.rs
tasks/stark/src/swiftness/pow/: config.rs  mod.rs  pow.rs
tasks/stark/src/swiftness/stark/: config.rs  types.rs
verifier/: Cargo.toml
verifier/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
