[workspace]
resolver = "2"
members = ["verifier", "client", "scheduler", "tasks/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
borsh = "1.5.7"
ciborium = { git = "https://github.com/neotheprogramist/ciborium", branch = "compatibility/rust-1.70" }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
solana-program = "2.2.1"
thiserror = "2.0.12"
typetag = "0.2.20"

client = { path = "./client" }
scheduler = { path = "./scheduler" }
verifier = { path = "./verifier" }

arithmetic = { path = "./tasks/arithmetic" }
stark = { path = "./tasks/stark" }
