[workspace]
resolver = "2"
members = ["animals", "client", "dynamic", "dog", "programs/*", "scheduler", "tasks/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
borsh = "1.5.7"
ciborium = { git = "https://github.com/neotheprogramist/ciborium", branch = "compatibility/rust-1.70" }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
solana-program = "2.2.1"
thiserror = "2.0.12"
typetag = "0.2.20"

animals = { path = "./animals" }
client = { path = "./client" }
dog = { path = "./dog" }
greeting = { path = "./programs/greeting" }
verifier = { path = "./programs/verifier" }
utils = { path = "./programs/utils" }

scheduler = { path = "./scheduler" }

arithmetic = { path = "./tasks/arithmetic" }
stark = { path = "./tasks/stark" }
