[workspace]
resolver = "2"
members = ["client", "programs/*", "tasks/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
borsh = "1.5.7"
solana-program = "2.2.1"
thiserror = "2.0.12"
typetag = "0.2.20"

client = { path = "./client" }
greeting = { path = "./programs/greeting" }
verifier = { path = "./programs/verifier" }
utils = { path = "./programs/utils" }

arithmetic = { path = "./tasks/arithmetic" }
stark = { path = "./tasks/stark" }
