[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
borsh.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
solana-cli-config = "2.2.1"
solana-client = "2.2.1"
solana-program.workspace = true
solana-sdk = "2.2.1"
thiserror = "2.0.12"

verifier.workspace = true
