[package]
name = "verifier"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true
thiserror.workspace = true
scheduler.workspace = true
arithmetic.workspace = true
serde.workspace = true
ciborium.workspace = true
