[package]
name = "greeting"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
bincode = "2.0.1"
borsh.workspace = true
ciborium.workspace = true
serde.workspace = true
solana-program.workspace = true
thiserror.workspace = true
