[package]
name = "swiftness_proof_parser"
edition = "2021"
version = "1.0.0"

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.21.0", features = ["derive"] }
num-bigint = { version = "0.4.4", features = ["serde"] }
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.5"
thiserror = "1.0.61"

[dev-dependencies]
swiftness_air = { path = "../crates/air", default-features = false, features = [
    "recursive",
    "keccak_160_lsb",
    "stone6",
] }
swiftness = { path = "../cli", default-features = false, features = [
    "recursive",
    "keccak_160_lsb",
    "stone6",
] }
bincode = "1.3.3"
