[package]
name = "stark"
version.workspace = true
edition.workspace = true

[dependencies]
lambdaworks-crypto = { version = "0.12.0", default-features = false }
lambdaworks-math = { version = "0.12.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
size-of = { version = "0.1.5", default-features = false }
starknet-types-core = { version = "0.1.8", features = ["hash"] }
borsh.workspace = true

utils.workspace = true
solana-program.workspace = true
