[package]
name = "swiftness_fri"
edition.workspace = true
version.workspace = true

[features]
default = ["std", "keccak_160_lsb"]
std = [
    "dep:thiserror",
    "swiftness_commitment/std",
    "swiftness_transcript/std",
    "starknet-core/std",
    "starknet-crypto/std",
]
keccak_160_lsb = ["swiftness_commitment/keccak_160_lsb"]
test_fixtures = []

[dependencies]
funvec.workspace = true
bytemuck.workspace = true
num-bigint.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_commitment.workspace = true
swiftness_transcript.workspace = true
