[package]
name = "funvec"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
starknet-crypto.workspace = true
solana-program = { git = "https://github.com/Okm165/solana.git", branch = "fix/deps" }
bytemuck = { workspace = true }
serde_json = { workspace = true }
