[package]
name = "swiftness_pow"
edition.workspace = true
version.workspace = true

[features]
default = ["std", "keccak"]
std = ["dep:thiserror", "swiftness_transcript/std", "starknet-crypto/std"]
keccak = []
test_fixtures = []

[dependencies]
bytemuck.workspace = true
blake2.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_transcript.workspace = true
