[package]
name = "swiftness_stark"
edition.workspace = true
version.workspace = true

[features]
default = ["std", "recursive_with_poseidon", "keccak_160_lsb", "stone6"]
std = [
    "dep:thiserror",
    "starknet-core/std",
    "starknet-crypto/std",
    "swiftness_air/std",
    "swiftness_commitment/std",
    "swiftness_fri/std",
    "swiftness_pow/std",
]
recursive_with_poseidon = ["swiftness_air/recursive_with_poseidon"]
stone6 = ["swiftness_air/stone6"]
keccak_160_lsb = ["swiftness_pow/keccak", "swiftness_commitment/keccak_160_lsb"]
test_fixtures = [
    "swiftness_air/test_fixtures",
    "swiftness_fri/test_fixtures",
    "swiftness_pow/test_fixtures",
]

[dependencies]
funvec.workspace = true
bytemuck.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_air.workspace = true
swiftness_commitment.workspace = true
swiftness_fri.workspace = true
swiftness_pow.workspace = true
swiftness_transcript.workspace = true

[dev-dependencies]
swiftness_air = { workspace = true, features = ["test_fixtures"] }
swiftness_fri = { workspace = true, features = ["test_fixtures"] }
swiftness_pow = { workspace = true, features = ["test_fixtures"] }
